# Kolokwium

./: Makefile
zad1/: main.cpp  test_build.sh
zad3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
zad3/src/: address.h  employee.h
zad4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
